[package]
name = "queue"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bytes = "1.0"
chrono = "0.4"
crc = "3.0"
mmap-io = "0.9"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.0"
