[package]
name = "queue"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
crc32fast = "1.5"
crossbeam = "0.8"
mmap-io = "0.9"
snafu.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
test-case = "3.3"

[lib]
bench = false

[[bench]]
name = "queue_benchmark"
harness = false
