[package]
name = "rsketch-common-storage-queue"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance persistent append-only queue"

[dependencies]
bytes.workspace = true
chrono.workspace = true
crc32fast = "1.5"
crossbeam = "0.8"
mmap-io = "0.9"
snafu.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = "0.8"
tempfile = "3.0"
test-case = "3.3"

[lib]
bench = false

[[bench]]
name = "queue_benchmark"
harness = false

[lints]
workspace = true
